--- a/index.html
+++ b/index.html
@@ -16,48 +16,127 @@
 
  <!-- Navigation -->
 <body>
-    <div class="sidebar-sidebar col-md-2 col-xs-12 col-sm-12">
-        <div class="sidebar-img">
-            <img class="img-responsive mainpic" src="images/mainpic.jpg">
+    <div class="page-wrapper">
+        <div class="sidebar-sidebar col-md-2 col-xs-12 col-sm-12">
+            <div class="sidebar-img">
+                <img class="img-responsive mainpic" src="images/mainpic.jpg">
+            </div>
+            <div class="sidebar-name">Justin Miron</div>
+            <div class="sidebar-title">PhD Student</div>
+            <div class="sidebar-uni">Cornell University</div>
+            <div class="sidebar-icons row">
+                <a href="mailto:justinmiron@cs.cornell.edu" class="sidebar-icon"><i class="fa fa-envelope fa-2x" aria-hidden="true"></i></a>
+                <a href="https://github.com/jmiron11" class="sidebar-icon"><i class="fa fa-github fa-2x" aria-hidden="true"></i></a>
+                <a href="https://www.linkedin.com/in/justinmiron/" class="sidebar-icon"><i class="fa fa-linkedin-square fa-2x" aria-hidden="true"></i></a>
+                <a href="CV-JustinMiron.pdf" class="sidebar-icon"><i class="fa fa-file-text fa-2x" aria-hidden="true"></i></a>
+            </div>
         </div>
-        <div class="sidebar-name">Justin Miron</div>
-        <div class="sidebar-title">PhD Student</div>
-        <div class="sidebar-uni">Cornell University</div>
-        <div class="sidebar-icons row">
-            <a href="mailto:justinmiron@cs.cornell.edu" class="sidebar-icon"><i class="fa fa-envelope fa-2x" aria-hidden="true"></i></a>
-            <a href="https://github.com/jmiron11" class="sidebar-icon"><i class="fa fa-github fa-2x" aria-hidden="true"></i></a>
-            <a href="https://www.linkedin.com/in/justinmiron/" class="sidebar-icon"><i class="fa fa-linkedin-square fa-2x" aria-hidden="true"></i></a>
-            <a href="CV-JustinMiron.pdf" class="sidebar-icon"><i class="fa fa-file-text fa-2x" aria-hidden="true"></i></a>
+        <div class="page-content col-md-10 page col-xs-12 col-sm-12">
+            <div class="row panel">
+                <div class="section-title">
+                    <h2><i class="fa fa-user section-icon" aria-hidden="true"></i>About Me</h2>
+                </div>
+                <p class="aboutme"> I am currently a first year Ph.D. student at Cornell University being advised by Professor <a href="http://www.cs.cornell.edu/~ragarwal/index.html">Rachit Agarwal</a>.</p>
+
+                <p class="aboutme">My current research interests include <b>distributed systems, datacenter networking and peer-to-peer systems</b>.</p>
+
+                <p class="aboutme">My current research focuses on understanding the feasability requirements of <b>resource disaggregated datacenters</b> and constructing systems that can yield their benefits. I am currently working on methods for realizing storage disaggregation. To that effect, I am working on <b>building a datacenter-scale storage management layer for disaggregated storage.</b></p>
+            </div>
+            <div class="row panel">
+                <div class="col-md-12 col-xs-12 col-sm-12 half-panel">
+                    <div class="section-title">
+                        <h2><i class="fa fa-briefcase section-icon" aria-hidden="true"></i>Work Experience</h2>
+                    </div>
+                    <ul class="list-unstyled exp">
+                        <div class="exp-title">
+                            <span class="exp-title-title"><b>Microsoft</b> &middot; Software Engineer Intern</span>
+                            <span class="exp-title-dates">Summer 2017</span>
+                        </div>
+                        <div class="exp-desc">
+                         <p>Worked with the <b>Azure Data Warehouse team</b> in <i>Aliso Viejo, CA</i> to <b>build a prototype for a distributed query store</b> for <a href="https://azure.microsoft.com/en-us/services/sql-data-warehouse/">Azure SQL Data Warehouse</a>. This enabled more extensive query monitoring and debugging for distributed queries, especially in the case of complex query execution plans spanning many servers.</p>
+                        </div>
+                    </ul>
+                    <ul class="list-unstyled exp">
+                        <div class="exp-title">
+                            <span class="exp-title-title"><b>Parallel Programming Lab</b> &middot; Research Assistant</span>
+                            <span class="exp-title-dates">Jan 2016 - May 2017</span>
+                        </div>
+                        <div class="exp-desc">
+                            <p>Researched techniques for <b>realizing latency-sensitive high performance computing applications in less predictable and higher latency environments,</b> such as commercial clouds. This involved optimizing application communication and minimizing latency introduced by the runtime system through lock-free algorithms. Other work included designing a <b>RDMA-backed message passing interface</b> for CRAY machines, and <b>building parallel object replication techniques for load balancing.</b></p>       
+                        </div>
+                    </ul>
+                    <ul class="list-unstyled exp">
+                        <div class="exp-title">
+                            <span class="exp-title-title"><b>Charmworks</b> &middot; Software Engineer</span>
+                            <span class="exp-title-dates">Nov 2016 - May 2017</span>
+                        </div>
+                        <div class="exp-desc">
+                            <p>Worked to <b>optimize a parallel program runtime system</b> Charm++, a parallel object-oriented programming language, for performance. Additionally, <b>modified parallel algorithms</b> for shared memory parallel applications <b>to operate scalably in a distributed memory context.</b></p>
+                        </div>
+                    </ul>
+                    <ul class="list-unstyled exp">
+                        <div class="exp-title">
+                            <span class="exp-title-title"><b>Google</b> &middot; Software Engineer Intern</span>
+                            <span class="exp-title-dates">Summer 2016</span>
+                        </div>
+                        <div class="exp-desc">
+                            <p>Worked with the <b>Google Compute Engine team</b> to improve cloud network reliability for development clusters through <b>developing network failure detection tools.</b></p>
+                        </div>
+                    </ul>
+                </div>
+            </div>
+            <div class="row panel">
+                <div class="col-md-12 col-xs-12 col-sm-12 half-panel">
+                    <div class="section-title">
+                        <h2><i class="fa fa-graduation-cap section-icon" aria-hidden="true"></i>Teaching Experience</h2>
+                    </div>
+                    <h4 class="teaching-uni">Cornell University</h4>
+                    <ul class="list-unstyled exp">
+                        <div class="teaching-title">
+                            <span class="exp-title-title"><b>CS 4320: Database Systems</b> &middot; Teaching Assistant</span>
+                            <span class="exp-title-dates">Fall 2017</span>
+                        </div>
+                    </ul>
+                    <h4 class="teaching-uni">University of Illinois at Urbana-Champaign</h4>
+                    <ul class="list-unstyled exp">
+                        <div class="teaching-title">
+                            <span class="exp-title-title"><b>CS 225: Data Structures</b> &middot; Course Assistant</span>
+                            <span class="exp-title-dates">Fall 2016 - Spring 2017</span>
+                        </div>
+                        <div class="teaching-title">
+                            <span class="exp-title-title"><b>ENG 100: Computer Engineering Orientation</b> &middot; Engineering Learning Assistant</span>
+                            <span class="exp-title-dates">Fall 2016</span>
+                        </div>
+                    </ul>
+                </div>
+            </div>
+            <div class="row panel">
+                <div class="section-title">
+                    <h2>Documents and Contact</h2>
+                </div>
+                    <div class="contact">
+                        <div class="contact-single col-md-3">
+                            <span class="contact-icon"><a href="mailto:justinmiron@cs.cornell.edu"><i class="fa fa-envelope fa-4x" aria-hidden="true"></i></a></span><br>
+                            <p class="contact-field">justinmiron@cs.cornell.edu</p>
+                        </div>
+                        <div class="contact-single col-md-3">
+                            <span class="contact-icon"> <a href="https://github.com/jmiron11" class="sidebar-icon"><i class="fa fa-github fa-4x" aria-hidden="true"></i></a></span><br>
+                            <p class="contact-field">jmiron11</p>
+                        </div>
+                        <div class="contact-single col-md-3">
+                            <span class="contact-icon"><a href="https://www.linkedin.com/in/justinmiron/" class="sidebar-icon"><i class="fa fa-linkedin-square fa-4x" aria-hidden="true"></i></a></span><br>
+                            <p class="contact-field">justinmiron</p>
+                        </div>
+                        <div class="contact-single col-md-3">
+                            <span class="contact-icon"> <a href="CV-JustinMiron.pdf" class="sidebar-icon"><i class="fa fa-file-text fa-4x" aria-hidden="true"></i></a></span><br>
+                            <p class="contact-field">Curriculum Vitae</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </div>
-                        <!-- SIDEBAR MENU -->
-        <!-- <div class="sidebar-usermenu">
-            <ul class="nav">
-                <li class="sidebar-usermenu-item">
-                    <a href="#">
-                    About Me</a>
-                </li>
-                <li class="sidebar-usermenu-item">
-                    <a href="#">
-                    Research Interests </a>
-                </li>
-                <li class="sidebar-usermenu-item">
-                    <a href="#">
-                    Current Projects</a>
-                </li>
-            </ul>
-        </div> -->
-        <!-- END MENU -->
     </div>
-    <div class="col-md-10 page col-xs-12 col-sm-12">
-        <div class="row panel">
-            <h2 class="section-title">About Me</h2>
-            <hr>
-            <p class="aboutme"> I am currently a first year Ph.D. student at Cornell University being advised by Professor <a href="http://www.cs.cornell.edu/~ragarwal/index.html">Rachit Agarwal</a>.</p>
 
-            <p class="aboutme">My current research interests include <b>distributed systems, datacenter networking and peer-to-peer systems</b>.
-
-            <p class="aboutme">My current research focuses on understanding the feasability requirements of <b>resource disaggregated datacenters</b> and constructing systems that can yield their benefits. I am currently working on methods for realizing storage disaggregation. To that effect, I am working on <b>building a datacenter-scale storage management layer for disaggregated storage.</b></p>
-        </div>
 
 <!--        <div class="row panel">
             <div class="col-md-6">
@@ -115,3 +194,9 @@
 </body>
 
 </html>
+
+
+ <a href="mailto:justinmiron@cs.cornell.edu" class="sidebar-icon"><i class="fa fa-envelope fa-2x" aria-hidden="true"></i></a>
+                <a href="https://github.com/jmiron11" class="sidebar-icon"><i class="fa fa-github fa-2x" aria-hidden="true"></i></a>
+                <a href="https://www.linkedin.com/in/justinmiron/" class="sidebar-icon"><i class="fa fa-linkedin-square fa-2x" aria-hidden="true"></i></a>
+                <a href="CV-JustinMiron.pdf" class="sidebar-icon"><i class="fa fa-file-text fa-2x" aria-hidden="true"></i></a>
